<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="103dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#A333FF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dangrek"
        android:gravity="center"
        android:text="@string/app_logo_text"
        android:textAlignment="center"
        android:textColor="#A333FF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- Tasks Label -->
    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogoText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tasks"
        android:textColor="#A333FF"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:backgroundTint="#6200EE"
        android:text="Logout"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:padding="4dp"
        android:gravity="center" />



    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tasksText"
        android:layout_above="@id/fab"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:backgroundTint="#A333FF"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add_task"
        app:tooltipText="@string/add_task" />

</RelativeLayout>